# migraDB-backend

./: README.md  pyproject.toml
migradb_gui/: app.py  connection.py  explorer.py  home.py  mapper.py  migration.py  runner.py  schema.py  storage.py  transform_editor.py  transforms.py  validator.py
tests/: test_migration_basic.py
