[project]
name = "migradb-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
tool.uv.package = true
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "PySide6>=6.7.0",
    "rich>=13.7.0",
]

[project.scripts]
migradb-gui = "migradb_gui.app:run"
